police plus petite dans la navbar, carré pour liste, ligne horizontale, descriptioin des avocats

--- a/team.html
+++ b/team.html
@@ -21,6 +21,7 @@
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
 					</div>
 					<div id="header-right">
+						<a href="index.html">ACCUEIL</a>
 					  <a href="#css">NOS SERVICES</a>
 					  <a href="team.html">LE CABINET</a>
 					  <a href="contact.html">CONTACT</a>
@@ -43,17 +44,15 @@
 	<div class="container">
 		<br>
 		<br>
-		<h3>L'équipe</h3>
+		<h3>Les avocats</h3>
 		<div class="description">
-			<p>L'équipe du cabinet Lex&Co</p>
+			<p>Les avocats du cabinet Lex&Co</p>
 		</div>
-		
+		<hr>
 		<div class="grid-container">
 			<div>
 				<h3></h3>
-				<img id="portrait" src="portrait.jpg" height=250px></img>
-				<br>
-				<br>	
+				<img id="portrait" src="portrait.jpg" height=250px></img>	
 				<div class="description">
 					<p></p>
 					
@@ -62,33 +61,49 @@
 				</div>
 			</div>
 			<div>
-				<h3>Maître Sophie Morreel Weber</h3>
+				<h5>Sophie Morreel Weber</h5>
 				<div class="description">
-					<h5>Education : </h5>
 					<p>
 						<ul>
 								<li>
-									Lorem Ipsum Lorem Ipsum L Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psumorem Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum
+									Avocat à la cour avec plus de 20 ans d'expérience
 								</li>
 								<li>
-									Lorem Ipsum Lorem Ipsum
+									Membre fondateur de Lex&Co en 2005
 								</li>
 								<li>
-									Lorem Ipsum L Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum orem Ipsum 
+									Expérience en France et en Chine
 								</li>
 						</ul> 
 					</p>
-					<h5>Expérience professionnelle : </h5>
+					<h5>Parcours universitaire : </h5>
 					<p>
 						<ul>
 								<li>
-									Lorem Ipsum Lorem Ipsum L Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psumorem Ipsum Lorem Ipsum psum Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum
+									D.E.S.S en Droit Fiscal
 								</li>
 								<li>
-									Lorem Ipsum Lorem Ipsum
+									Université Paris Assas
 								</li>
 								<li>
-									Lorem Ipsum L Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum  Ipsum Lorem Ipsum psum orem Ipsum 
+									Université d'Aix-en-Provence
+								</li>
+						</ul> 
+					</p>
+					<h5>Parcours professionnel : </h5>
+					<p>
+						<ul>
+								<li>
+									Fondateur Lex&Co (2005-présent)
+								</li>
+								<li>
+									Associé au cabinet XXX (199X-2005)
+								</li>
+								<li>
+									Collaboratrice au cabinet XXX
+								</li>
+								<li>
+									Sed dignissim, tortor molestie scelerisque varius, massa velit blandit erat, non tempus nunc turpis vel dui. Morbi et interdum urna. Suspendisse potenti. Quisque lacinia elit quis diam congue, gravida rhoncus libero malesuada. Sed sollicitudin erat sed lectus lacinia faucibus. Sed vel turpis augue. Praesent volutpat bibendum ligula eget dapibus. Integer nulla felis, suscipit vitae interdum et, elementum sed tellus. Quisque sed enim est. Nunc a tortor orci. In ut nunc nunc. Vivamus rhoncus efficitur quam, eu cursus augue viverra vitae. Fusce lectus nulla, accumsan quis scelerisque et, hendrerit sed neque. Etiam sed leo quis ante laoreet faucibus sed at leo. Phasellus rutrum mi eget felis tristique, vel sagittis mi ornare.
 								</li>
 						</ul> 
 					</p>
@@ -96,6 +111,7 @@
 				</div>
 			</div>
 		</div> <!-- fin du grid container-->
+		<hr>
 		<br>
 		<br>
 
