--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
 					</div>
 					<div id="header-right">
+						<a href="index.html">ACCUEIL</a>
 					 	<a href="#css">NOS SERVICES</a>
 					  <a href="team.html">LE CABINET</a>
 					  <a href="contact.html">CONTACT</a>
