ajout du hamburger, il faut desormais paramétrer l'affiche mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="description" content="Cabinet d'avocats">
 		<meta name="author" content="Antoine Weber">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/hamburgers.css">
 		<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
@@ -19,6 +20,11 @@
 				<div class="grid-container">
 					<div id="header-left">
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
+					  <div class="hamburger hamburger--stand">
+							<div class="hamburger-box">
+								<div class="hamburger-inner"></div>
+							</div>
+						</div>
 					</div>
 					<div id="header-right">
 						<a href="index.html">ACCUEIL</a>
