--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<nav>
 			<div class="container">
 				<div class="grid-container">
-					<div id="header-left">
+					<div class="header-left">
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
 					  <div class="hamburger hamburger--stand">
 							<div class="hamburger-box">
@@ -26,7 +26,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="header-right">
+					<div class="header-right">
 						<a href="index.html">ACCUEIL</a>
 					  <a href="#css">NOS SERVICES</a>
 					  <a href="team.html">LE CABINET</a>
@@ -151,7 +151,6 @@
 
 
 </footer>
-
-
+<script src="js/main.js"></script>
 </body>
 </html>
