--- a/team.html
+++ b/team.html
@@ -9,18 +9,24 @@
 		<meta name="description" content="Cabinet d'avocats">
 		<meta name="author" content="Antoine Weber">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/hamburgers.css">
 		<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
-	<header>
+	<header id="header">
 		<nav>
 			<div class="container">
 				<div class="grid-container">
-					<div id="header-left">
+					<div class="header-left">
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
+					  <div class="hamburger hamburger--stand">
+							<div class="hamburger-box">
+								<div class="hamburger-inner"></div>
+							</div>
+						</div>
 					</div>
-					<div id="header-right">
+					<div class="header-right">
 						<a href="index.html">ACCUEIL</a>
 					  <a href="#css">NOS SERVICES</a>
 					  <a href="team.html">LE CABINET</a>
@@ -167,8 +173,6 @@
 
 
 </footer>
-
-
-
+<script src="js/main.js"></script>
 </body>
 </html>
