utilisation de flex pour le centrage vertical d'un lien

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			
 			
 			<div class="grid-container">
-				<div><a href="aweb33/index.html">AWEB33</a></div>
-				<div><a href="lexco/index.html">LEXCO</a></div>
+				<div class="flex"><a href="aweb33/index.html">AWEB33</a></div>
+				<div class="flex"><a href="lexco/index.html">LEXCO</a></div>
 				<div>ABC</div>
 				<div>ABC</div>
 				<div>ABC</div>
