--- a/lexco/index.html
+++ b/lexco/index.html
@@ -20,9 +20,11 @@
 				<div class="grid-container">
 					<div class="header-left">
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
-					  <div class="hamburger hamburger--stand">
-							<div class="hamburger-box">
-								<div class="hamburger-inner"></div>
+					  <div class="flexbox">
+					  	<div class="hamburger hamburger--stand">
+								<div class="hamburger-box">
+									<div class="hamburger-inner"></div>
+								</div>
 							</div>
 						</div>
 					</div>
