--- a/bootstrap-demo/bootstrap.html
+++ b/bootstrap-demo/bootstrap.html
@@ -6,24 +6,134 @@
 </head>
 <body>
 
+<!-- Navbar -->
 
-<div class="container">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container ">
+		  <a class="navbar-brand" href="#">Lex&Co</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  	<div class="navbar-nav mr-auto">
+		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+		      <a class="nav-item nav-link" href="#">Features</a>
+		      <a class="nav-item nav-link" href="#">Pricing</a>
+		      <a class="nav-item nav-link" href="#">Contact</a>
+		    </div>
+		    <div class="navbar-nav ml-auto">
+		      <a class="nav-item nav-link" href="#">Login</a>
+		      <a class="nav-item nav-link" href="#">Sign Up</a>
+		    </div>
 
-	  <a class="navbar-brand" href="#">Lex&Co</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	    <div class="navbar-nav">
-	      <a class="nav-item nav-link active" href="#">Active <span class="sr-only">(current)</span></a>
-	      <a class="nav-item nav-link" href="#">Link1</a>
-	      <a class="nav-item nav-link" href="#">Link2</a>
-	      <a class="nav-item nav-link disabled" href="#">Disabled</a>
-	    </div>
+		  </div>
 	  </div>
 	</nav>
+
+<!-- Container -->
+<div class="container">
+
+<!-- Jumbotron -->
+
+<div class="jumbotron my-4">
+  <h1 class="display-4">Hello, I'm a Jumbotron!</h1>
+  <p class="lead">My function is to attract the user's attention. It appears to have been successful, since you are reading this text right now.</p>
+  <hr class="my-4">
+  <p>This jumbotron is proposed by booststrap. They provide it as a free-to-use feature</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
 </div>
+
+
+
+<!-- Alert -->
+
+<div class="alert alert-success" role="alert">
+  Le message a été envoyé ! Nous vous contacterons dans les plus bref délais.
+</div>
+<hr class="my-4">
+
+<!-- Titre avec Badge -->
+<div class="">
+<h4>Retrouvez les toutes dernières séries ajoutées par le webmaster! <span class="badge badge-info">New</span></h4>
+</div>
+
+<!-- Card -->
+<div class="card my-4" style="width: 18rem; display:inline-block;">
+  <img class="card-img-top" src="card-image.png" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Happy Chinese</h5>
+    <p class="card-text">An intermediate level TV Show that features nice little stories and includes both english and chinese subtitles.</p>
+    <a href="#" class="btn btn-primary">Watch</a>
+  </div>
+</div>
+
+<div class="card my-4 mx-4" style="width: 18rem; display:inline-block;">
+  <img class="card-img-top" src="card-image-2.png" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Prison Break</h5>
+    <p class="card-text">A breath-taking TV Show that follows Michael Scoffield quest for freedom. Enter the great adventure.</p>
+    <a href="#" class="btn btn-primary">Watch</a>
+  </div>
+</div>
+
+<hr class="my-4">
+
+
+<div class="">
+<h4>Voici l'exemple d'un Carousel! <span class="badge badge-success">A e s t h e t i C</span></h4>
+</div>
+
+<!-- Caroussel -->
+
+
+
+<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="aix.png" alt="First slide">
+	      <div class="carousel-caption d-none d-md-block">
+			    <h1>Lex&Co</h1>
+			    <h4>Retrouvez les toutes dernières séries ajoutées par le webmaster! <span class="badge badge-info">New</span></h4>
+			    <p>L'expertise</p>
+	 		 </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="cabinet.png" alt="Second slide">
+	       <div class="carousel-caption d-none d-md-block">
+				   	<h1>Lex&Co</h1>
+				    <h4>Retrouvez les toutes dernières séries ajoutées par le webmaster! <span class="badge badge-info">New</span></h4>
+				    <p>L'expertise</p>
+	 	 		</div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="aix.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+
+
+<!-- Fin du container -->
+</div>
+
+
 
 
 
