--- a/bootstrap-demo/bootstrap.html
+++ b/bootstrap-demo/bootstrap.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Bootstrap Demo</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -21,7 +22,7 @@
 		      <a class="nav-item nav-link" href="#">Pricing</a>
 		      <a class="nav-item nav-link" href="#">Contact</a>
 		    </div>
-		    <div class="navbar-nav ml-auto">
+		    <div class="navbar-nav">
 		      <a class="nav-item nav-link" href="#">Login</a>
 		      <a class="nav-item nav-link" href="#">Sign Up</a>
 		    </div>
