--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -127,6 +127,22 @@
   </a>
 </div>
 
+<hr class="my-4">
+
+<!-- Row et Col -->
+ <div class="row my-4" style="border: solid 1px black;background: beige;">
+    <div class="col-lg-2">
+      One of three columns
+    </div>
+    <div class="col-lg-8">
+      One of three columns
+    </div>
+    <div class="col-lg-2">
+      One of three columns
+    </div>
+  </div>
+
+
 
 
 
