--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			<div class="grid-container">
 				<div class="flex"><a href="aweb33/index.html">AWEB33</a></div>
 				<div class="flex"><a href="lexco/index.html">LEXCO</a></div>
-				<div class="flex">ABC</div>
-				<div>ABC</div>
+				<div class="flex"><a href="bootstrap/index.html">LEXCO</a></div>
+				<div class="flex"><a href="i-bail/index.html">LEXCO</a></div>
 				<div>ABC</div>
 				<div>ABC</div>
 				<div>ABC</div>
