--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title>Bootstrap Demo</title>
+
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<style type="text/css">
+  
+
+
+
+</style>
+
+
+
+
+
+
 </head>
 <body>
 
@@ -141,6 +157,16 @@
       One of three columns
     </div>
   </div>
+
+  <hr class="my-4">
+
+  <nav>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="#">Accueil</a></li>
+      <li class="breadcrumb-item"><a href="#">Kit de Location</a></li>
+       <li class="breadcrumb-item active">Contrat de location</li>
+    </ol>
+  </nav>
 
 
 
