--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -146,27 +146,68 @@
 <hr class="my-4">
 
 <!-- Row et Col -->
- <div class="row my-4" style="border: solid 1px black;background: beige;">
+ <div class="row my-4" style="">
     <div class="col-lg-2">
-      One of three columns
-    </div>
+    	<div class="dropdown">
+				<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Settings</button>
+				<div class="dropdown-menu">
+			    <a class="dropdown-item" href="#">Action</a>
+			    <a class="dropdown-item" href="#">Another action</a>
+			    <a class="dropdown-item" href="#">Something else here</a>
+			  </div>
+   		</div>
+   	</div>
     <div class="col-lg-8">
-      One of three columns
+     <button type="button" class="btn btn-info">$10.99</button>
     </div>
     <div class="col-lg-2">
-      One of three columns
+      <button type="button" class="btn btn-danger">Buy</button>
     </div>
   </div>
 
   <hr class="my-4">
 
-  <nav>
+
+<!-- breadcrumb -->
     <ol class="breadcrumb">
       <li class="breadcrumb-item"> <a href="#">Accueil</a></li>
       <li class="breadcrumb-item"><a href="#">Kit de Location</a></li>
        <li class="breadcrumb-item active">Contrat de location</li>
     </ol>
-  </nav>
+
+
+
+
+  <hr class="my-4">
+
+
+<!-- progress -->
+
+
+<div class="progress">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+</div>
+
+  <hr class="my-4">
+
+
+<!-- div avec backgroundcolor et rounded bord -->
+
+
+<div class="bg-dark text-white rounded text-center text-uppercase p-3">abc</div>
+
+
+  <hr class="my-4">
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -175,8 +216,6 @@
 
 <!-- Fin du container -->
 </div>
-
-
 
 
 
