cadre à fond blanc arrondi et à bordure grise, qui contient le texte

--- a/i-bail/index.html
+++ b/i-bail/index.html
@@ -71,6 +71,16 @@
 
     }
 
+
+    article{
+    	background-color: rgb(241,241,241);
+    	padding-top:50px;
+    	padding-bottom:50px;
+    }
+    article .container{
+    	background-color: white;
+    }
+
     </style>
   </head>
   <body>
@@ -162,27 +172,33 @@
       </div>
     </section>
 
- <!-- 
-    <section class="filler-section">
-      <div class="dark-layer"></div>
-    </section>
-    -->
 
 
 
 
+ <!-- article-->
+<article>
+	
+	<div class="container border rounded text-center text-uppercase">
+		<br><br>
+		<h1>Contrat de location</h1>
+	<br><br><br><br><br><br>
 
 
 
 
+	</div>
 
 
+</article>
 
 
 
 
     <section>
-      <div class="dark-layer"></div>
+      <div class="dark-layer">
+      	
+      </div>
     </section>
 
 
@@ -190,13 +206,13 @@
  <!-- FOOTER-->
 
     <footer class="footer bg-dark">
-    	<div class="container d-flex flex-row">
+    	<div class="container d-md-flex flex-md-row text-center">
     		<a class="nav-link text-secondary"  href="#">Newsletter</a>
 			  <a class="nav-link text-secondary " href="#">Conditions générales de Vente</a>
 			  <a class="nav-link text-secondary" href="#">Mentions Légales</a>
 			  <a class="nav-link text-secondary" href="#">Contact</a>
   		</div>
-    </footer class="footer bg-dark">
+    </footer>
 
    
 
