telecharger un fichier

--- a/i-bail/product_description.html
+++ b/i-bail/product_description.html
@@ -123,6 +123,7 @@
     <p>Contrat de location habitation principale ou mixte vide (habitation et professionnel), conforme à la réglementation de la loi n° 89-462 du 6 juillet 1989 modifiée par la loi ALUR du 26 mars 2014. Garanti conforme à la réglementation pendant un délai de 30 jours après l'achat. Réf. 711 créé en 1991 (3.196.291 exemplaires vendus au 1er janvier 2017). Mise en page étudiée pour une utilisation facile et pratique.</p>
     <div class="d-flex justify-content-end">
     	<button class="btn btn-danger">Acheter - 2€</button>
+      <a href="logement-meuble.jpg" class="btn btn-light" download>Télécharger</a>
     </div>
 
 
