ajout d'un icone svg

--- a/i-bail/product_description.html
+++ b/i-bail/product_description.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto+Condensed:400,700" rel="stylesheet">
+ 
 
 
     <title>i-bail.com</title>
@@ -73,6 +74,7 @@
     	padding-top:50px;
     	padding-bottom:50px;
     }
+    
   
 
     </style>
@@ -119,11 +121,21 @@
 		<h1 class="text-center text-uppercase">Location Vide</h1>
     <br>
     <div class="container">
+    <div class="row justify-content-lg-center">
+    <div class="col-lg-12">
     <h2>Description du Produit :</h2>
-    <p>Contrat de location habitation principale ou mixte vide (habitation et professionnel), conforme à la réglementation de la loi n° 89-462 du 6 juillet 1989 modifiée par la loi ALUR du 26 mars 2014. Garanti conforme à la réglementation pendant un délai de 30 jours après l'achat. Réf. 711 créé en 1991 (3.196.291 exemplaires vendus au 1er janvier 2017). Mise en page étudiée pour une utilisation facile et pratique.</p>
+    <p>Contrat de location habitation principale ou mixte vide (habitation et professionnel), conforme à la réglementation de la loi n° 89-462 du 6 juillet 1989 modifiée par la loi ALUR du 26 mars 2014. Garanti conforme à la réglementation pendant un délai de 30 jours après l'achat. Réf. 711 créé en 1991 (3.196.291 exemplaires vendus au 1er janvier 2017). Mise en page étudiée pour une utilisation facile et pratique. <i class="octicons ociton octicon-desktop-download"></i>
+      </p>
     <div class="d-flex justify-content-end">
-    	<button class="btn btn-danger">Acheter - 2€</button>
-      <a href="logement-meuble.jpg" class="btn btn-light" download>Télécharger</a>
+    	<button class="btn btn-danger">
+      Acheter - 2€
+      </button>
+      <a href="logement-meuble.jpg" class="btn btn-light" download>
+        <img src="https://cdnjs.cloudflare.com/ajax/libs/octicons/8.0.0/svg/desktop-download.svg"></img> 
+        Télécharger
+      </a>
+    </div>
+    </div>
     </div>
 
 
