--- a/i-bail/about.html
+++ b/i-bail/about.html
@@ -74,6 +74,11 @@
     	padding-top:50px;
     	padding-bottom:50px;
     }
+
+    p{
+      font-family: open sans;
+      line-height:1.5;
+    }
     
   
 
@@ -95,9 +100,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="index.html">Acceuil<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link active" href="#">Contrats/Kit</a>
+            <a class="nav-item nav-link " href="#">Contrats/Kit</a>
             <a class="nav-item nav-link" href="#">Actualités</a>
-            <a class="nav-item nav-link" href="about.html">À Propos</a>
+            <a class="nav-item nav-link active" href="#">À Propos</a>
           </div>
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="#">Mon compte</a>
@@ -118,23 +123,37 @@
 	
 	<div class="container border rounded bg-white">
 		<br><br>
-		<h1 class="text-center text-uppercase">Location Vide</h1>
+		<h1 class="text-center text-uppercase">À Propos</h1>
     <br>
     <div class="container">
     <div class="row justify-content-lg-center">
     <div class="col-lg-12">
-    <h2>Description du Produit :</h2>
-    <p>Contrat de location habitation principale ou mixte vide (habitation et professionnel), conforme à la réglementation de la loi n° 89-462 du 6 juillet 1989 modifiée par la loi ALUR du 26 mars 2014. Garanti conforme à la réglementation pendant un délai de 30 jours après l'achat. Réf. 711 créé en 1991 (3.196.291 exemplaires vendus au 1er janvier 2017). Mise en page étudiée pour une utilisation facile et pratique. <i class="octicons ociton octicon-desktop-download"></i>
-      </p>
-    <div class="d-flex justify-content-end">
-    	<button class="btn btn-danger">
-      Acheter - 2€
-      </button>
-      <a href="logement-meuble.jpg" class="btn btn-light" download>
-        <img src="https://cdnjs.cloudflare.com/ajax/libs/octicons/8.0.0/svg/desktop-download.svg"></img> 
-        Télécharger
-      </a>
-    </div>
+    <h2>Qui sommes nous ?</h2>
+    <p>I-Bail est la plate-forme internet de WEBER DIFFUSION S.a.r.l. Successeur de WEBER Edition AE, Editeur spécialisé depuis 1990 de baux, contrats et documents annexes dans le domaine de la location.
+
+<p>Des pédagogues, juristes, professionnels de la location et bailleurs particuliers ont conjugué leur savoir pour rédiger des documents compréhensibles de tous dans une présentation claire et logique.
+
+<p>Leur mise à jour permanente et la limitation de leur utilisation dans un délai de 30 jours après le téléchargement nous permet de garantir leur conformité légale face aux instances juridiques qui encadrent les relations bailleur-locataire.
+
+<p>Le paiement par carte bancaire est assuré par le système sécurisé CyberMut du CREDIT MUTUEL.
+
+<p>Une facture est établie lors de chaque transaction.
+
+<h2>Mentions légales</h2>
+<p>I-Bail
+
+<br>WEBER DIFFUSION
+
+<br>Sarl au capital de 8000 euros.
+
+<br>RCS Draguignan 2001-B-44
+
+<br>Siret 434 565 156 OOO 16
+
+<br>APE 5811 Z
+<br>Banque Crédit Mutuel (C.C.M.) Draguignan
+
+   
     </div>
     </div>
 
@@ -155,9 +174,8 @@
 
     <hr class="my-4">
       <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="#">Accueil</a></li>
-      <li class="breadcrumb-item"><a href="#">Contrats de Location</a></li>
-       <li class="breadcrumb-item active">Location Vide</li>
+      <li class="breadcrumb-item">À Propos</li>
+    
     </ol>
   </div>
 
