--- a/i-bail/index.html
+++ b/i-bail/index.html
@@ -74,6 +74,19 @@
     	padding-top:50px;
     	padding-bottom:50px;
     }
+
+    .card{
+    	letter-spacing: 1px;
+    	font-family: open sans,sans-serif;
+    	font-size: 0.85rem;
+    	text-align:center;
+
+    }
+
+    .card-title{
+    	font-weight: bold;
+    	font-size: 1rem;
+    }
   
 
     </style>
@@ -96,7 +109,7 @@
             <a class="nav-item nav-link active" href="index.html">Acceuil<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="product_description.html">Contrats/Kit</a>
             <a class="nav-item nav-link" href="#">Actualités</a>
-            <a class="nav-item nav-link" href="#">À Propos</a>
+            <a class="nav-item nav-link" href="about.html">À Propos</a>
           </div>
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="#">Mon compte</a>
@@ -198,7 +211,7 @@
        <img class="card-img-top" src="logement-vide.jpg" alt="Card image">
         <div class="card-body">
      		<h5 class="card-title">Location Vide</h5>
-          <p class="card-text">An intermediate level TV Show that features nice little stories and includes both english and chinese subtitles.</p>
+          <p class="card-text">Kit de location complet pour louer un logement vide de particulier à particulier. Loi ALUR</p>
           <a href="#" class="btn btn-light">Commander</a>
         </div>
       </div>
@@ -208,7 +221,7 @@
         <div class="card-body">
         	
           <h5 class="card-title">Location Meublée</h5>
-          <p class="card-text">A breath-taking TV Show that follows Michael Scoffield quest for freedom. Enter the great adventure.</p>
+          <p class="card-text">Kit de location complet pour louer un logement meublé de particulier à particulier. Loi ALUR</p>
           <a href="#" class="btn btn-light">Commander</a>
         </div>
       </div>
@@ -218,7 +231,7 @@
         <div class="card-body">
         	
           <h5 class="card-title">Location-saisonniere</h5>
-          <p class="card-text">A breath-taking TV Show that follows Michael Scoffield quest for freedom. Enter the great adventure.</p>
+          <p class="card-text">Kit de location complet pour location saisonnière (courte durée / location vacances)</p>
           <a href="#" class="btn btn-light">Commander</a>
         </div>
       </div>
