--- a/i-bail/product_description.html
+++ b/i-bail/product_description.html
@@ -137,6 +137,7 @@
         Télécharger
       </a>
     </div>
+<div class="d-flex justify-content-end">
 	    	    <div id="paypal-button-container"></div>
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 <script>
@@ -198,6 +199,7 @@ onAuthorize: function (data, actions) {
 }
 }, '#paypal-button-container');
 </script>
+	</div>
     </div>
     </div>
 
