--- a/i-bail/product_description.html
+++ b/i-bail/product_description.html
@@ -136,10 +136,8 @@
         <img src="https://cdnjs.cloudflare.com/ajax/libs/octicons/8.0.0/svg/desktop-download.svg"></img> 
         Télécharger
       </a>
-	    <br>
-	    <br>
     </div>
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-end my-4">
 	
 	    	    <div id="paypal-button-container"></div>
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
