--- a/i-bail/product_description.html
+++ b/i-bail/product_description.html
@@ -126,7 +126,7 @@
     <h2>Description du Produit :</h2>
     <p>Contrat de location habitation principale ou mixte vide (habitation et professionnel), conforme à la réglementation de la loi n° 89-462 du 6 juillet 1989 modifiée par la loi ALUR du 26 mars 2014. Garanti conforme à la réglementation pendant un délai de 30 jours après l'achat. Réf. 711 créé en 1991 (3.196.291 exemplaires vendus au 1er janvier 2017). Mise en page étudiée pour une utilisation facile et pratique. <i class="octicons ociton octicon-desktop-download"></i>
       </p>
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-center">
     	<button class="btn btn-danger">
       Acheter - 2€
       </button>
@@ -137,7 +137,7 @@
         Télécharger
       </a>
     </div>
-<div class="d-flex justify-content-end my-4">
+<div class="d-flex justify-content-center my-4">
 	
 	    	    <div id="paypal-button-container"></div>
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
