lexco, image changed

--- a/lexco/index.html
+++ b/lexco/index.html
@@ -5,9 +5,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-		<title>Lex&Co Avocats🔹</title>
+		<title>Lex&Co Avocats</title>
 		<meta name="description" content="Cabinet d'avocats">
-		<meta name="author" content="Antoine Weber">
+		<meta name="author" content="MWP Avocats">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/hamburgers.css">
 		<link rel="icon" type="image/png" href="favicon.png" />
