lexco: texte de l'acceuil, ajout tel dans navbar

--- a/lexco/index.html
+++ b/lexco/index.html
@@ -20,6 +20,11 @@
 				<div class="grid-container">
 					<div class="header-left">
 					  <a href="index.html"><img id="logo" src="logo.png"></img></a>
+					  <div id="phone">
+						  <img height=20px src="phone logo.png" alt="phone">
+						  <a href="tel:0494511616"><b>04.94.51.16.16</b></a>
+					  </div>
+					  
 					  <div class="flexbox">
 					  	<div class="hamburger hamburger--stand">
 								<div class="hamburger-box">
@@ -30,7 +35,7 @@
 					</div>
 					<div class="header-right">
 						<a href="index.html">ACCUEIL</a>
-					  <a href="#css">NOS SERVICES</a>
+					  <a href="#">NOS SERVICES</a>
 					  <a href="team.html">LE CABINET</a>
 					  <a href="contact.html">CONTACT</a>
 				  </div>
@@ -52,21 +57,26 @@
 		<br>
 		<h3>Cabinet d'avocats en France et à l'international</h3>
 		<div class="description">
-			<p>Le cabinet d'avocats Lex&Co, fondé en 2005 par Maître Sophie Morreel Weber, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec le client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide et satisfaisante</p>
+			<p>
+					Le cabinet d'avocats Lex&Co, fondé en 2005, offre un service de qualité à l'aide d'une approche juridique sur-mesure. La proximité que nous établissons avec notre client permet de résoudre au mieux les situations auxquelles il est confronté. Nous nous engageons à apporter une réponse rapide tenant compte de ses objectifs, besoins et attentes. 
+				</p>
+				<p>
+				Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (Voir la liste de nos services)
+			</p>
 		</div>
 
 		<div class="grid-container">
 			<div>
 				<h3>Une équipe expérimentée</h3>
 				<div class="description">
-					<p>Forte de 25 années de pratique du métier d'avocat, Maître Sophie Morreel Weber met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisations d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition et apporte la plus value résultant de plus d'une dizaine d'années de services d'exercice. </p>
-					<p> Maître XX , en tant qu'avocate collaboratrice, spécialisée en XX, apporte son savoir-faire au cabinet et forme un atout complémentaire. (<a>Voir la présentation de notre équipe</a>)</p>
+					<p>Maître Sophie Morreel Weber, forte de 25 années de pratique du métier d'avocat,  met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. et apporte la plus value résultant de son expertise </p>
+					<p> Maître Virginie Parisse, avocate collaboratrice, apporte son savoir-faire et son dynamisme au service du client. (<a href="team.html">Voir la présentation de notre équipe</a>)</p>
 				</div>
 			</div>
 			<div>
-				<h3>Une prestation complète</h3>
+				<h3>Une prestation complète et réactive</h3>
 				<div class="description">
-				<p>Le cabinet, généraliste, couvre l'ensemble des domaines du droit et sait apporter une réponse à toutes les questions juridiques, qu'il s'agisse du droit des personnes, du droit des affaires, du droit du travail etc.. (<a>Voir la liste de nos services</a>) La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. De votre premier contact jusqu'à la satisfaction de votre demande, l'équipe du cabinet s'attache à fournir un service continu et réactif.</p>
+				<p> La prestation effectuée par le cabinet vise à traiter la question ou la situation dans toute son ampleur et dans tous ses enjeux. Du premier rendez vous jusqu'à l'obtention d'un jugement ou de la réalisation d’une transaction ou encore de la rédaction d'actes juridiques, l'équipe dynamique du cabinet est à votre disposition toute l’année et en cas d’urgence, joignable à tout moment.</p>
 				<p></p>
 				</div>
 			</div>
@@ -113,11 +123,11 @@
 				<div>
 					<br>
 					<h5>À propos</h5>
-					<a href="google.com">Qui sommes nous</a><br>
-					<a href="google.com">Honoraires</a><br>
-					<a href="google.com">Confidentialité</a><br>
-					<a href="google.com">Sécurité des données</a><br>
-					<a href="google.com">Mentions légales</a>
+					<a href="#">Qui sommes nous</a><br>
+					<a href="#">Honoraires</a><br>
+					<a href="#">Confidentialité</a><br>
+					<a href="#">Sécurité des données</a><br>
+					<a href="#">Mentions légales</a>
 					<br>
 					<br>
 					<br>
@@ -126,17 +136,17 @@
 				<div>
 					<br>
 					<h5>Nos services</h5>
-					<a href="google.com">Droit civil</a><br>
-					<a href="google.com">Droit des affaires</a><br>
-					<a href="google.com">Droit du travail</a><br>
-					<a href="google.com">Droit de la famille</a><br>
-					<a href="google.com">Plus de services...</a>
+					<a href="#">Droit civil</a><br>
+					<a href="#">Droit des affaires</a><br>
+					<a href="#">Droit du travail</a><br>
+					<a href="#">Droit de la famille</a><br>
+					<a href="#">Plus de services...</a>
 				</div>
 				<div>
 					<br>
 					<h5>Contact</h5>
-					<a href="tel:0494511616"><b>04.94.51.16.XX</b></a><br>
-					<a href="mailto:contact@lexcolaw.com">contact@lexco.com</a><br>
+					<a href="tel:0494511616"><b>04.94.51.16.16</b></a><br>
+					<a href="mailto:contact@mwp-avocats.com">contact@mwp-avocats.com</a><br>
 					64 Via Nova<br>
 					Pôle d'Excellence Jean Louis<br>
 					83600 FREJUS
