add white layer to fade panoramic photo

--- a/lexco/index.html
+++ b/lexco/index.html
@@ -50,7 +50,9 @@
 <article>
 	<div id="lowerHeader"></div>
 	<div id="roomForNavBar"></div>
-	<div id="panoramicPhoto"></div>
+	<div id="panoramicPhoto">
+		<div class="layer"></div>
+	</div>
 	
 	<div class="container">
 		<br>
