--- a/lexco/index.html
+++ b/lexco/index.html
@@ -71,7 +71,7 @@
 			<div>
 				<h3>Une équipe expérimentée</h3>
 				<div class="description">
-					<p>Maître Sophie Morreel Weber, forte de 25 années de pratique du métier d'avocat,  met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit. et apporte la plus value résultant de son expertise </p>
+					<p>Maître Sophie Morreel Weber, forte de 25 années de pratique du métier d'avocat,  met en œuvre l'expérience qu'elle a acquise dans tous les domaines du droit et apporte la plus value résultant de son expertise </p>
 					<p> Maître Virginie Parisse, avocate collaboratrice, apporte son savoir-faire et son dynamisme au service du client. (<a href="team.html">Voir la présentation de notre équipe</a>)</p>
 				</div>
 			</div>
