first article content, font-size 18, ul li vertical margin

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -25,29 +25,27 @@
 
         <!--Article 1-->
         <h3>
-            mac​OS Character Viewer
+                Why I'm making a custom blog
         </h3>
         <p>
-            Ever see a character and wonder what it was? Ever want to insert a character but couldn’t figure out how to
-            type it? You can find the answer to these questions and many more at the bottom of the Edit menu in macOS.
+            
+Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress.
+
         </p>
 
-        <a href="article.html">Continue Reading</a>
-
-
+        <a href="article-Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+        
         <!--Article 2-->
         <h3>
-            Character​Set
-
-
+                The importance of reformulation
         </h3>
         <p>
-            CharacterSet isn’t a set and it doesn’t contain Character values. Before we use it to trim, filter, and
-            search through text, we should take a closer look to see what’s actually going on.
+            In my next Article, I will talk about a very important aspect of learning, which is reformulation
+
+
         </p>
 
-        <a href="article.html">Continue Reading</a>
-
+        <a href="article-Why-I'm-making-a-custom-blog.html">Continue Reading</a>
 
         <!--Footer-->
 
