--- a/minimalist-blog/article-Why-I'm-making-a-custom-blog.html
+++ b/minimalist-blog/article-Why-I'm-making-a-custom-blog.html
@@ -5,8 +5,8 @@
     <meta lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Minimalist Blog</title>
-    <meta name="description" content="A minimalist blog">
+    <title>Why I'm making a custom blog</title>
+    <meta name="description" content="">
 
     <link rel="stylesheet" href="main.css">
 </head>
