second article, md version available

--- a/minimalist-blog/Why-I'm-making-a-custom-blog.html
+++ b/minimalist-blog/Why-I'm-making-a-custom-blog.html
@@ -32,6 +32,7 @@
             </div>
         </header>
         <!--Article Text -->
+        <p><code>Hello World!</code></p>
         <p>
                 Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress:
         </p>
