--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -33,19 +33,18 @@ Why I'm making a custom blog instead of using ready-to-use solutions like Blogge
 
         </p>
 
-        <a href="article-Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+        <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
         
         <!--Article 2-->
         <h3>
-                The importance of reformulation
+                Using Markdown to write posts
         </h3>
         <p>
-            In my next Article, I will talk about a very important aspect of learning, which is reformulation
-
+                The problem: It's cumbersome to write html by hand. When you write a blog post, you want to focus on what you write, and not on what html tag you will use here and what css class you will use there.
 
         </p>
 
-        <a href="article-Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+        <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
 
         <!--Footer-->
 
