safari fix for room at the bottom

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -47,7 +47,7 @@ Why I'm making a custom blog instead of using ready-to-use solutions like Blogge
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
 
         <!--Footer-->
-
+    <footer></footer>
     </div>
     <!--Fin du wrapper-->
 
