hr has better vertical margin, copyright has again the fix for safari

--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -47,7 +47,7 @@ Why I'm making a custom blog instead of using ready-to-use solutions like Blogge
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
 
         <!--Footer-->
-        <hr>
+        <hr style="margin-top:25px">
         <footer>
             Copyright 2018 Antoine Weber
         </footer>
