add new article template, commented. index and main.css also commented

--- a/minimalist-blog/Why-I'm-making-a-custom-blog.html
+++ b/minimalist-blog/Why-I'm-making-a-custom-blog.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+<!--meta-->
 
 <head>
+    <!--universal-->
     <meta charset="utf-8">
     <meta lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Why I'm making a custom blog</title>
-    <meta name="description" content="">
-
+    <!--content description-->
+    <title>Minimalist Blog</title>
+    <meta name="description" content="A minimalist blog">
+    <!--feuille de style-->
     <link rel="stylesheet" href="main.css">
 </head>
 
