--- a/minimalist-blog/index.html
+++ b/minimalist-blog/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
+<!--meta-->
 
 <head>
+    <!--universal-->
     <meta charset="utf-8">
     <meta lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!--content description-->
     <title>Minimalist Blog</title>
     <meta name="description" content="A minimalist blog">
-
+    <!--feuille de style-->
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<!--page-->
 
+<body>
+    <!--wrapper-->
     <div class="wrapper">
+        <!--Content-->
 
         <!--Header-->
+        <!--Logo-->
         <a href="index.html">
             <img src="logo.svg" alt="logo">
         </a>
+        <!--Title-->
         <h1>slk333|Awew33 </h1>
-
         <hr>
 
+
+        <!--Articles-->
+
+        <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
         <!--Article 1-->
+        <!--Article Title-->
         <h2>
-                Why I'm making a custom blog
+            Why I'm making a custom blog
         </h2>
+        <!--Article Description-->
         <p>
-            
-Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress.
-
+            Why I'm making a custom blog instead of using ready-to-use solutions like Blogger, Medium or Wordpress.
         </p>
-
+        <!--Article Link-->
         <a href="Why-I'm-making-a-custom-blog.html">Continue Reading</a>
+        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
+
         
+         <!--ACTUAL ARTICLE CONTENT STARTS HERE-->
         <!--Article 2-->
+        <!--Article Title-->
         <h2>
-                Using Markdown to write posts
+            Using Markdown to write posts
         </h2>
+        <!--Article Description-->
         <p>
-                The problem: It's cumbersome to write html by hand. When you write a blog post, you want to focus on what you write, and not on what html tag you will use here and what css class you will use there.
-
+            The problem: It's cumbersome to write html by hand. When you write a blog post, you want to focus on what
+            you write, and not on what html tag you will use here and what css class you will use there.
         </p>
-
+        <!--Article Link-->
         <a href="Using-Markdown-to-write-posts.html">Continue Reading</a>
+        <!--ACTUAL ARTICLE CONTENT ENDS HERE-->
+
 
         <!--Footer-->
         <hr style="margin-top:25px">
@@ -63,6 +81,7 @@ Why I'm making a custom blog instead of using ready-to-use solutions like Blogge
 
 
 
+    <!--scripts-->
     <script src="" async defer></script>
 </body>
 
